hard-gists/3356622/run.log
=== Docker Run Log for 3356622 ===
Started at: Mi 29. Okt 13:49:17 CET 2025

[2025-10-29 13:49:17] START: Running container for 3356622
[2025-10-29 13:49:17] SUCCESS: Container 3ac9f8fa52e28689a0b1262062b1d37c1e65430fd063f910da9f37896fc21917 started for 3356622
=== Container logs for 3356622 ===
  File "/snippet.py", line 27
    print "Maximum difference was %d" % (max_diff)
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 3356622 ===
[2025-10-29 13:49:19] INFO: Container 3ac9f8fa52e28689a0b1262062b1d37c1e65430fd063f910da9f37896fc21917 has stopped
